--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main", "develop", "feature"]
   pull_request:
-    branches: [ "main" , "develop"]
+    branches: ["develop"]
 
 permissions:
   contents: read
